--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
+
+		<key>NSCameraUsageDescription</key>
+		<string>We need access to your camera to take photos and videos for your profile.</string>
+
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>We need access to your photos to allow you to upload profile pictures and share media.</string>
+
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
